--- a/client/www/index.html
+++ b/client/www/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+
+    <title>
+
+    </title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -23,6 +26,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
+
   <body ng-app="starter">
     <!--
       The nav bar that will be updated as we navigate between views.
@@ -31,11 +35,14 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
+
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view>
+    </ion-nav-view>
+
   </body>
 </html>
