--- a/client/www/index.html
+++ b/client/www/index.html
@@ -31,10 +31,11 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+
+    <!-- <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-    </ion-nav-bar>
+    </ion-nav-bar> -->
 
     <!--
       The views will be rendered in the <ion-nav-view> directive below
@@ -43,6 +44,5 @@
     -->
     <ion-nav-view>
     </ion-nav-view>
-
   </body>
 </html>
