--- a/client/www/index.html
+++ b/client/www/index.html
@@ -8,11 +8,12 @@
 
     </title>
 
-
     <!-- compiled css output -->
-    <link href="css/ionic.app.css" rel="stylesheet">
+    <!-- <link href="css/ionic.app.css" rel="stylesheet"> -->
+    <link href="css/ionic.app.min.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
+
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -20,7 +21,9 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
     <script src="js/controllers.js"></script>
+
     <script src="js/services.js"></script>
   </head>
 
@@ -29,7 +32,7 @@
       The nav bar that will be updated as we navigate between views.
     -->
 
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
